--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,5 @@
 [[source]]
-url = "http://mirrors.aliyun.com/pypi/simple/"
+url = "https://mirrors.aliyun.com/pypi/simple/"
 verify_ssl = true
 name = "aliyun"
 
@@ -13,6 +13,7 @@ xlsxwriter = "*"
 pillow = "*"
 pathlib = "*"
 pysimplegui = "*"
+psutil = "*"
 
 [dev-packages]
 
